# minne-story-gen

./: README.md  pyproject.toml
examples/: goal_oriented_gen.ipynb  goal_template.jinja  story.md
